Correccion de errores

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
         <div class="total__grid">
           <h3 class="title-input">Tip Amonut</h3>
           <span class="total__precio">$00.00</span>
-          <p class="total__person">/ Per Person</p>
+          <p class="total__person">/ Person</p>
 
           <div class="espacio"></div>
 
           <h3 class="sub-title2">Total</h3>
           <span class="total__precio2">$00.00</span>
-          <p class="total__person2">/ person</p>
+          <p class="total__person2">/ Person</p>
         </div>
 
-        <button class="btn">RESET</button>
+        <button class="btn">Enter</button>
       </div>
     </main>
 
