Correccion de errores de diseño responsive

--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tip Calculator App</title>
-
-    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Css -->
     <link rel="stylesheet" href="style.css" />
-    <!-- Animation -->
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-  <link rel='shortcut icon' type='image/x-icon' href='/images/favicon-32x32.png' />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/images/favicon-32x32.png"
+    />
   </head>
 
   <body>
@@ -34,7 +34,11 @@
           <label class="title-input">Bill</label>
           <span class="error-Zero">Can't be zero</span>
           <input id="factura" class="input" type="number" placeholder="0.00" />
-          <img class="input-svg" src="./images/icon-dollar.svg" alt="dollar svg" />
+          <img
+            class="input-svg"
+            src="./images/icon-dollar.svg"
+            alt="dollar svg"
+          />
         </div>
         <div class="tips-box">
           <label class="title-input">Select Tip %</label>
@@ -43,13 +47,23 @@
           <button class="percentage">15%</button>
           <button class="percentage">25%</button>
           <button class="percentage">50%</button>
-          <input id="custom" class="input percentage" type="number" placeholder="Custom" maxlength="3" />
+          <input
+            id="custom"
+            class="input percentage"
+            type="number"
+            placeholder="Custom"
+            maxlength="3"
+          />
         </div>
         <div class="content-input">
           <label class="title-input">Number of People</label>
           <span class="error-Zero">Can't be zero</span>
           <input id="people" class="input" type="number" placeholder="0" />
-          <img class="input-svg" src="./images/icon-person.svg" alt="person svg" />
+          <img
+            class="input-svg"
+            src="./images/icon-person.svg"
+            alt="person svg"
+          />
         </div>
       </div>
 
