correccion de tamaño

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
   </head>
 
   <body>
-    <header class="box-title">
-      <h1 class="title animate__animated animate__bounceIn">SPLI<br />TTER</h1>
-    </header>
+    <h1 class="title animate__animated animate__bounceIn">SPLI<br />TTER</h1>
 
     <main class="app">
       <div class="contenido-principal">
@@ -90,7 +88,7 @@
 
           <h3 class="sub-title2">Total</h3>
           <span class="total__precio2">$00.00</span>
-          <p class="total__person2">/ Per Person</p>
+          <p class="total__person">/ Per Person</p>
         </div>
 
         <button class="btn">Enter</button>
